<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:inputType="text"
                android:id="@+id/inputTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title_hint" />

            <EditText
                android:inputType="text"
                android:id="@+id/inputTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description_hint" />

            <EditText
                android:inputType="datetime"
                android:id="@+id/inputCreatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created_at_hint" />

            <CheckBox
                android:id="@+id/inputIsCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_text" />

            <Button
                android:id="@+id/btnSaveTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_task_button"
                android:backgroundTint="@color/Blue"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>